# codegen

./: .gitignore  Cargo.toml  README.md  codegen.model.yaml  go.mod  main.go  main_test.go
.github/workflows/: unit-test.yml
data/: test.db
internal/analyzer/: fiber.go  fiber_test.go  types.go
internal/generator/: openapi.go  openapi_test.go
internal/graph/: schema.go  schema_test.go
internal/loader/: loader.go
pkg/arch/: arch_test.go
src/: config.rs  main.rs
template/: api_routers_template.tmpl  app_template.tmpl  crud_datasource_sqlbuilder_template.tmpl  crud_model_template.tmpl  crud_repository_template.tmpl  crud_usecase_bun_template.tmpl  crud_usecase_template.tmpl  internal_grpc_client_makefile_template.tmpl  internal_grpc_client_proto_template.tmpl  internal_grpc_client_template.tmpl  internal_grpc_clients_template.tmpl  internal_grpc_health_proto_template.tmpl  internal_grpc_health_provider_template.tmpl  internal_grpc_health_server_template.tmpl  internal_grpc_makefile_template.tmpl  internal_grpc_proto_template.tmpl  internal_grpc_provider_template.tmpl  internal_grpc_server_template.tmpl  internal_grpc_servers_template.tmpl  internal_grpc_template.tmpl  pkg_collection_map_template.tmpl  template.go  template_test.go  wire_template.tmpl
templates/: crystal_class.hbs  csharp_class.hbs  dart_class.hbs  elixir_struct.hbs  go_struct.hbs  haskell_data.hbs  java_class.hbs  kotlin_class.hbs  nim_type.hbs  ocaml_type.hbs  php_class.hbs  python_class.hbs  ruby_class.hbs  rust_struct.hbs  swift_struct.hbs  typescript_interface.hbs  zig_struct.hbs
(+41 files in other folders)
