[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
# CLI Argument parsing
clap = { version = "4", features = ["derive"] }
# Configuration file parsing (YAML)
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
# Database Drivers
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "mysql",
    "postgres",
    "sqlite",
    "macros",
    "time",
    "uuid",
    "json",
] } # Comprehensive async DB driver
tokio = { version = "1", features = ["full"] } # Async runtime for sqlx
# Templating Engine
handlebars = "4"
# Error handling
anyhow = "1.0"     # Ergonomic error handling
thiserror = "1.0"  # For custom error types
serde_json = "1.0" # JSON serialization/deserialization
# Naming conventions (optional, but useful)
Inflector = "0.11"     # For converting between cases (snake_case, PascalCase, etc.)
async-trait = "0.1.88"
